charts/infra/kyverno-policies/allow-only-digitalocean-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-only-digitalocean-registry
spec:
  validationFailureAction: enforce
  rules:
    - name: restrict-image-registry
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from registry.digitalocean.com are allowed."
        pattern:
          spec:
            containers:
              - image: "registry.digitalocean.com/*"
